 
[v1.1.2p8]
 - API: StackDockStation does not change focused Dockable if the selection changes while ending a drag and drop operation. This prevents the framework from doing some unnecessary work.
 ! API: If using the EclipseTheme, the actions on the tabs can be configured to disappear if the tabs are not selected or focused.
 - API: Introduced the CloseActionFactory, clients can now more easily change the close action of all CDockables
 - API: Added support for more icons in CloseAction
 
[v1.1.2p8a]
 - Bugfix: normalizing/minimizing a stack of minimized or externalized CDockables, where some CDockables were associated with a CWorkingArea and others were not, could close some dockables
 - Bugfix: ScreenToolbarInserter did not respect DockAcceptance, which could lead to drag and drop operations that did only execute the "drag" part.
 
[v1.1.2p8b]
 - Bugfix: "normalizing" a CDockable that is part of a stack, but neither the first nor the second entry, and that was not part of a stack when it was "normal", could cause an IndexOutOfBoundsException
 - Bugfix: Ignore RuntimeExceptions from Class.forName - some ClassLoaders do not like this method
 
[v1.1.2p8c]
 - Bugfix: DockRegister did remove DockStationListeners from protected DockStations, but it should have kept these listeners
 - API: Changed initialization of ToolbarDockStation such that it is more easy for subclasses to add additional Components
 - Bugfix: When loading a CStation from a perspective, and exception was thrown because of the unique identifier of the station not beeing an identifier of a SingleCDockable
 - API: Added some methods (save, load) to CControl to more easily handle layouts
 
[v1.1.2p8d]
 - Bugfix: When clicking on a Dockable with no focusable Components, the framework will now attempt to focus one of the children (at least ensuring focus goes away from the old Component)